--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.6.4",
     "laravel-vite-plugin": "^1.0.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.0.0-beta.9",
     "vite": "^5.0.0"
   },
   "name": "digilib",
@@ -23,6 +23,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.0-beta.9",
     "ansi-regex": "^6.1.0",
     "ansi-styles": "^6.2.1",
     "any-promise": "^1.3.0",
