--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "axios": "^1.6.4",
     "laravel-vite-plugin": "^1.0.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^4.0.0-beta.9",
     "vite": "^5.0.0"
   },
   "name": "digilib",
@@ -23,6 +22,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.0-beta.9",
     "@tailwindcss/vite": "^4.0.0-beta.9",
     "ansi-regex": "^6.1.0",
     "ansi-styles": "^6.2.1",
@@ -124,6 +124,7 @@
     "strip-ansi-cjs": "^6.0.1",
     "sucrase": "^3.35.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
+    "tailwindcss": "3.4",
     "thenify": "^3.3.1",
     "thenify-all": "^1.6.0",
     "to-regex-range": "^5.0.1",
